Add solution to exercise 1